--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,15 @@
 <resources>
     <string name="app_name">ChatApp</string>
     <string name="action_settings">Settings</string>
+    <string name="send">送出</string>
+    <string name="inputhint">輸入聊天內容</string>
+    <string name="user_name">no name</string>
+    <string name="time">13:00</string>
+    <string name="message_text">13:00</string>
+
+
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
