--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,15 @@
 <resources>
     <string name="app_name">ChatApp</string>
     <string name="action_settings">Settings</string>
-    <string name="send">送出</string>
-    <string name="inputhint">輸入聊天內容</string>
+    <string name="send">Send</string>
+    <string name="inputhint">Message</string>
     <string name="user_name">no name</string>
     <string name="time">13:00</string>
-    <string name="message_text">13:00</string>
+    <string name="message_text">message text</string>
+    <string name="login">Login</string>
+    <string name="forget_password">Forget Password</string>
+    <string name="register">Register</string>
+
 
 
     <!-- Strings used for fragments for navigation -->
