finish register and login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
     <string name="login">Login</string>
     <string name="forget_password">Forget Password</string>
     <string name="register">Register</string>
-
+    <string name="resend">Resend Verification Email</string>
+    <string name="refresh">Refresh / Login</string>
 
 
     <!-- Strings used for fragments for navigation -->
