--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,11 @@
     <string name="action_settings">Settings</string>
     <string name="send">Send</string>
     <string name="inputhint">Message</string>
-    <string name="user_name">no name</string>
+<!--    <string name="user_name">loading user name...</string>-->
     <string name="time">13:00</string>
     <string name="message_text">message text</string>
     <string name="login">Login</string>
+    <string name="logout">Logout</string>
     <string name="forget_password">Forget Password</string>
     <string name="register">Register</string>
     <string name="resend">Resend Verification Email</string>
