--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="send">Send</string>
     <string name="inputhint">Message</string>
-<!--    <string name="user_name">loading user name...</string>-->
     <string name="time">13:00</string>
     <string name="message_text">message text</string>
     <string name="login">Login</string>
@@ -12,6 +11,7 @@
     <string name="register">Register</string>
     <string name="resend">Resend Verification Email</string>
     <string name="refresh">Refresh / Login</string>
+    <string name="reset">Send Password Reset Email</string>
 
 
     <!-- Strings used for fragments for navigation -->
