--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,12 @@
     <string name="logout">Logout</string>
     <string name="forget_password">Forget Password</string>
     <string name="register">Register</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="name">Name</string>
     <string name="resend">Resend Verification Email</string>
     <string name="refresh">Refresh / Login</string>
     <string name="reset">Send Password Reset Email</string>
-
-
-    <!-- Strings used for fragments for navigation -->
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
